# fast-api-project

./: .gitignore  alembic.ini  crud.py  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_08_31_2252-6b4b3268d773_create_products_table.py  2024_09_01_1507-79dc33d1cb4a_create_users_table.py  2024_09_01_1517-5f0c3d61a5ff_create_posts_table.py  2024_09_01_1551-74788d072309_create_profile_table.py  2024_09_01_2012-cb74a0d7d886_create_orders_table.py  2024_09_01_2036-889775ac4d3f_create_order_column_association_table.py  2024_09_01_2131-0d3bf1370700_add_autoincrement_to_order_product_.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  views.py
