[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Sergei Gutman  <sergutman4@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.8.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
